[gd_scene load_steps=6 format=3 uid="uid://yak7438fnhwo"]

[ext_resource type="Texture2D" uid="uid://8nv0pl3nh4pb" path="res://assets/cowpng.png" id="1_dihb0"]
[ext_resource type="Script" path="res://scripts/cow.gd" id="1_gu6j8"]
[ext_resource type="Texture2D" uid="uid://cl32acr3xrivd" path="res://assets/milk_bubble.png" id="3_28cfh"]

[sub_resource type="SpriteFrames" id="SpriteFrames_qukor"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_dihb0")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fd7x6"]
size = Vector2(47, 39)

[node name="cow" type="Area2D"]
scale = Vector2(0.2, 0.2)
script = ExtResource("1_gu6j8")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_qukor")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(9.5, 19.5)
shape = SubResource("RectangleShape2D_fd7x6")

[node name="status_bubble" type="Sprite2D" parent="."]
position = Vector2(-65, -40)
scale = Vector2(2, 1.737)
texture = ExtResource("3_28cfh")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
